bk_ida/gccida/c1/store_fixed_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1175:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1179:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1196:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v32; // r13 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1200:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // [rsp+18h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1221:44: error: invalid suffix 'xmode' on integer constant
if ( !v12 || v12 > mode_bitsize[*(short *)0xmode] ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1222:18: error: invalid suffix 'xmode' on integer constant
v11 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1223:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1289:22: error: use of undeclared identifier 'machine_mode'
v26 = gen_lowpart( ( machine_mode)v19, value); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1291:26: error: use of undeclared identifier 'machine_mode'
v26 = convert_to_mode( ( machine_mode)v19, value, 1); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1302:19: error: use of undeclared identifier 'machine_mode'
v28 = mask_rtx( ( machine_mode)v19, 0, bitsize, 0); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1303:25: error: use of undeclared identifier 'machine_mode'
value = expand_binop( ( machine_mode)v19, v27, value, v28, 0LL, 1, OPTAB_LIB_WIDEN); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/expmed.c:1309:38: error: use of undeclared identifier 'machine_mode'
value = expand_shift( LSHIFT_EXPR, ( machine_mode)v19, value, v29, 0LL, 1); 
                                     ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_fixed_bit_field/src/obj/expmed.o] Error 1
